goalora-app/goalora-app-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: goalora-app-ssl
  namespace: goalsetter
  labels:
    app: goal-setter-react
    app.kubernetes.io/component: goal-setter-react
    app.kubernetes.io/instance: goal-setter-react
    app.kubernetes.io/name: goal-setter-react
    app.kubernetes.io/part-of: goal-setter-react
    app.openshift.io/runtime: httpd
    app.openshift.io/runtime-version: 2.4-el7
spec:
  host: app.goalora.com
  to:
    kind: Service
    name: goal-setter-react
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    certificate: |-
      -----BEGIN CERTIFICATE-----
      
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      
      -----END PRIVATE KEY-----
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
